# MTPC-Cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.sff
.github/workflows/: appimage.yml  cmake-single-platform.yml  windows.yml
dev/: AppImageBuilder.yml  mtpc.desktop
src/: console.cpp  console.hpp  global_variables.hpp  globals.cpp  globals.hpp  images.cpp  images.hpp  json.hpp  main.cpp  main.hpp  texture_converter.cpp  texture_converter.hpp  utils.cpp  utils.hpp
src/libs/sff/: sff.cpp  sff.h
